Build via GitHub Actions on JDK 11 and JDK 17