@@ -211,14 +211,14 @@
           <version>1.1.0</version>
           <dependencies>
             <dependency>
-              <groupId>javax.xml.bind</groupId>
-              <artifactId>jaxb-api</artifactId>
-              <version>2.1</version>
+              <groupId>jakarta.xml.bind</groupId>
+              <artifactId>jakarta.xml.bind-api</artifactId>
+              <version>2.3.3</version>
             </dependency>
             <dependency>
-              <groupId>com.sun.xml.bind</groupId>
-              <artifactId>jaxb-impl</artifactId>
-              <version>2.2.5</version>
+              <groupId>org.glassfish.jaxb</groupId>
+              <artifactId>jaxb-runtime</artifactId>
+              <version>2.3.3</version>
             </dependency>
           </dependencies>
           <configuration>
@@ -362,7 +362,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M5</version>
           <configuration>
-            <argLine>@{jacoco.java.option}</argLine>
+            <argLine>@{jacoco.java.option} --add-opens java.base/sun.nio.ch=ALL-UNNAMED</argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -375,7 +375,7 @@
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>3.0.0-M4</version>
           <configuration>
-            <argLine>@{jacoco.java.option} -Djdk.attach.allowAttachSelf=true</argLine>
+            <argLine>@{jacoco.java.option} --add-opens java.base/sun.nio.ch=ALL-UNNAMED -Djdk.attach.allowAttachSelf=true</argLine>
           </configuration>
           <executions>
             <execution>
